<resources>
    <string name="app_name">電卓</string>
    <string name="start_button">始める</string>
    <string name="number_0_button">0</string>
    <string name="number_1_button">1</string>
    <string name="number_2_button">2</string>
    <string name="number_3_button">3</string>
    <string name="number_4_button">4</string>
    <string name="number_5_button">5</string>
    <string name="number_6_button">6</string>
    <string name="number_7_button">7</string>
    <string name="number_8_button">8</string>
    <string name="number_9_button">9</string>
    <string name="cancel_button">C</string>
    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="divide_button">/</string>
    <string name="multiply_button">*</string>
    <string name="equals_button">=</string>
    <string name="decimal_point_button">.</string>
    <string name="calculate">計算</string>
</resources>